--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "proxy": "http://localhost:5000",
   "dependencies": {
     "@material-ui/core": "^4.12.3",
+    "@material-ui/lab": "^4.0.0-alpha.60",
     "axios": "^0.19.0",
     "bcryptjs": "^2.4.3",
     "cookie-session": "^2.0.0-beta.3",
