--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
   "dependencies": {
     "@material-ui/core": "^4.12.3",
     "@material-ui/lab": "^4.0.0-alpha.60",
+    "@uppy/react": "^1.12.1",
     "axios": "^0.19.0",
     "bcryptjs": "^2.4.3",
+    "cloudinary": "^1.26.3",
     "cookie-session": "^2.0.0-beta.3",
     "dotenv": "^4.0.0",
     "express": "^4.16.4",
@@ -19,11 +21,14 @@
     "react-dom": "^16.8.6",
     "react-redux": "^7.1.1",
     "react-router-dom": "^5.0.0",
+    "react-s3": "^1.3.1",
     "react-scripts": "^3.4.1",
+    "react-webcam": "^5.2.4",
     "redux": "^4.0.1",
     "redux-logger": "^3.0.6",
     "redux-saga": "^1.0.2",
-    "twilio": "^3.66.1"
+    "twilio": "^3.66.1",
+    "uppy": "^1.31.0"
   },
   "scripts": {
     "start": "node server/server.js",
