--- a/package.json
+++ b/package.json
@@ -4,13 +4,16 @@
   "private": true,
   "proxy": "http://localhost:5000",
   "dependencies": {
+    "@date-io/dayjs": "^1.3.13",
     "@material-ui/core": "^4.12.3",
     "@material-ui/lab": "^4.0.0-alpha.60",
+    "@material-ui/pickers": "^3.3.10",
     "@uppy/react": "^1.12.1",
     "axios": "^0.19.0",
     "bcryptjs": "^2.4.3",
     "cloudinary": "^1.26.3",
     "cookie-session": "^2.0.0-beta.3",
+    "dayjs": "^1.10.6",
     "dotenv": "^4.0.0",
     "express": "^4.16.4",
     "passport": "^0.4.0",
