--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-html5-camera-photo": "^1.5.5",
     "react-redux": "^7.1.1",
     "react-router-dom": "^5.0.0",
     "react-s3": "^1.3.1",
